Fix: relatórios e mudança de arquivos