@@ -1,52 +1,46 @@
 package tarefas;
 
-import Utils.BankList;
-import com.sun.source.tree.TryTree;
+
 import lombok.extern.slf4j.Slf4j;
 import models.BankCustomer;
 import models.PaymentSlip;
+import org.w3c.dom.ls.LSOutput;
 
-import javax.sound.midi.Soundbank;
 import java.io.IOException;
 import java.math.BigDecimal;
 import java.nio.file.Files;
-import java.nio.file.OpenOption;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.*;
 import java.time.format.DateTimeFormatter;
-import java.time.temporal.*;
 import java.util.*;
-import java.util.function.Consumer;
-import java.util.function.Function;
-import java.util.function.Predicate;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
 @Slf4j
 public class LiquidarBoleto implements Runnable {
 
-    static List<String> ok = new ArrayList<>();
+    static List<LocalDate> ok = new ArrayList<>();
     static List<String> erro = new ArrayList<>();
-    static List<String> vencidos = new ArrayList<>();
+    static List<LocalDate> vencidos = new ArrayList<>();
     static long duration;
     @Override
     public void run() {
-        long start = new Date().getTime();
+        Instant start = Instant.now();
         Path diretorio = Paths.get("");
 
         executaLiquidacaoDeBoletos(diretorio);
 
-        duration = new Date().getTime() - start;
-        geraRelatorios();
+
+        geraRelatorios(start);
     }
 
-    private void geraRelatorios() {
-        System.out.println("Tempo de execução: " + duration);
-        System.out.println("Total de boletos gerados: " + ok.size() + vencidos.size());
-        System.out.println("Total de boletos gerados com sucesso: " + ok.size());
-        System.out.println("Total de boletos gerados vencidos: " + vencidos.size());
-
+    private void geraRelatorios(Instant instant) {
+        long timeElapsed = Instant.now().toEpochMilli() - (instant.toEpochMilli());
+        System.out.println("Tempo de execução: " + timeElapsed);
+        int lidos = ok.size() + vencidos.size() + erro.size();
+        System.out.println("Total de boletos lidos: " + lidos);
+        System.out.println("Total de boletos liquidados com sucesso: " + ok.size());
+        System.out.println("Total de boletos invalidos: " + erro.size());
+        System.out.println("Total de boletos vencidos: " + vencidos.size());
     }
 
     private void executaLiquidacaoDeBoletos(Path diretorio) {
@@ -65,10 +59,11 @@ public class LiquidarBoleto implements Runnable {
     private static void extrairLinhasDoArquivo(Path path) {
         try (var linha = Files.lines(path)) {
             var pagamentos = linha
-                    .filter(LiquidarBoleto::filtraArquivosOK)
+                   .filter(LiquidarBoleto::filtraArquivosOK)
                   .map(LiquidarBoleto::montaBoleto)
                     .filter(LiquidarBoleto::verificaBoletoVencido)
-                    .map(LiquidarBoleto::geraBoletoPago).toList();
+                    .map(LiquidarBoleto::geraBoletoPago)
+                    .collect(Collectors.toList());
 
             geraArquivodePagamento(path.getFileName().toString(), pagamentos);
 
@@ -80,19 +75,23 @@ public class LiquidarBoleto implements Runnable {
     }
 
     private static boolean verificaBoletoVencido(PaymentSlip boleto) {
-        if(boleto.getDueDate().isBefore(LocalDate.now())) {
-            ok.add(boleto.getId());
+        if(!boletoVencido(boleto)) {
+            ok.add(boleto.getDueDate());
             return true;
         } else {
-            vencidos.add(boleto.getId());
+            vencidos.add(boleto.getDueDate());
             return false;
         }
 
 
     }
 
+    private static boolean boletoVencido(PaymentSlip boleto) {
+        return boleto.getDueDate().isBefore(LocalDate.now());
+    }
+
     private static void geraArquivodePagamento(String nomeArquivoRetorno, List<String> pagamentos) throws IOException {
-        Path novoArquivo = Paths.get(nomeArquivoRetorno.replace("emissao.ret","")+"pagamento.ret");
+        Path novoArquivo = Paths.get(nomeArquivoRetorno.replace(".rem",".ret"));
 
         Files.write(novoArquivo,pagamentos);
     }
@@ -101,15 +100,14 @@ public class LiquidarBoleto implements Runnable {
     private static String geraBoletoPago(PaymentSlip boleto) {
         liquidaBoletos(boleto);
 
-        return String.format("%s%s%s%s%s%s%s%s",
+        return String.format("%s%s%s%s%s%s%s,Pago",
                 boleto.getId(),
                 boleto.getDueDate().toString().replace("-",""),
                 boleto.getPayer().getAgencyNumber(),
                 boleto.getPayer().getAccountNumber(),
                 boleto.getPayee().getAgencyNumber(),
                 boleto.getPayee().getAccountNumber(),
-                boleto.getValue(),
-                ";Pago");
+                boleto.getValue());
     }
 
     private static void liquidaBoletos(PaymentSlip paymentSlip) {
@@ -130,32 +128,52 @@ public class LiquidarBoleto implements Runnable {
                 .build();
     }
 
-    private static PaymentSlip montaBoleto(String s) {
+    private static PaymentSlip montaBoleto(String linha) {
+        String[] valores = linha.split(",");
 
+        BankCustomer payee = BankCustomer.builder()
+                .id(UUID.randomUUID().toString())
+                .agencyNumber(valores[2])
+                .accountNumber(valores[3])
+                .balance(new BigDecimal(valores[7]))
+                .build();
+        BankCustomer payer = BankCustomer.builder()
+                .id(UUID.randomUUID().toString())
+                .agencyNumber(valores[4])
+                .accountNumber(valores[5])
+                .balance(new BigDecimal(valores[8]))
+                .build();
         return PaymentSlip.builder()
-                .id(s.substring(0,36))
-                .dueDate(LocalDate.of(Integer.parseInt(s.substring(36,40)),Integer.parseInt(s.substring(40,42)),Integer.parseInt(s.substring(42,44)) ))
-                .payer(BankCustomer.builder()
-                        .agencyNumber(s.substring(44,48))
-                        .accountNumber(s.substring(48,53))
-                        .balance(BigDecimal.valueOf(300))
-                        .build())
-                .payee(BankCustomer.builder()
-                        .agencyNumber(s.substring(53,57))
-                        .accountNumber(s.substring(57,62))
-                        .balance(BigDecimal.valueOf(0))
-                        .build())
-                .value(BigDecimal.valueOf(Long.parseLong((s.substring(62,65)))))
+                .id(valores[0])
+                .dueDate(LocalDate.parse(valores[1], DateTimeFormatter.BASIC_ISO_DATE))
+                .value(new BigDecimal(valores[6]))
+                .payee(
+                        BankCustomer.builder()
+                                .id(UUID.randomUUID().toString())
+                                .agencyNumber(valores[2])
+                                .accountNumber(valores[3])
+                                .balance(new BigDecimal(valores[7]))
+                                .build())
+                .payer(
+                        BankCustomer.builder()
+                                .id(UUID.randomUUID().toString())
+                                .agencyNumber(valores[4])
+                                .accountNumber(valores[5])
+                                .balance(new BigDecimal(valores[8]))
+                                .build())
                 .build();
     }
 
     private static boolean filtraArquivosOK(String s) {
+        if (!s.endsWith("OK")) {
+            erro.add("erro");
+        }
         return s.endsWith("OK");
     }
 
 
 
     private static boolean filtraArquivosRetorno(Path path) {
-        return path.getFileName().toString().endsWith("ret");
+        return path.getFileName().toString().endsWith("liquidacao.rem");
     }
 }
